Fixed z-index value

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,5 +12,5 @@ footer {
 }
 
 .card .btn {
-    z-index: 5000;
+    z-index: 2;
 }
